--- a/RealmsVK/RealmsVK.vcxproj
+++ b/RealmsVK/RealmsVK.vcxproj
@@ -80,7 +80,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>..\Extern\glfw\lib\lib;C:\VulkanSDK\1.1.126.0\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Extern\glfw\lib\lib;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -94,7 +94,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>F:\Workspace\Cpp\TakeTwoOnRealms\Extern\glfw-3.3.bin.WIN64\lib-vc2019;C:\VulkanSDK\1.1.126.0\Lib32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Extern\glfw-3.3.bin.WIN64\lib-vc2019;C:\VulkanSDK\1.1.126.0\Lib32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -112,7 +112,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>F:\Workspace\Cpp\TakeTwoOnRealms\Extern\glfw-3.3.bin.WIN64\lib-vc2019;C:\VulkanSDK\1.1.126.0\Lib32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Extern\glfw-3.3.bin.WIN64\lib-vc2019;C:\VulkanSDK\1.1.126.0\Lib32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -130,7 +130,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>F:\Workspace\Cpp\TakeTwoOnRealms\Extern\glfw-3.3.bin.WIN64\lib-vc2019;C:\VulkanSDK\1.1.126.0\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Extern\glfw\lib\lib;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -168,6 +168,10 @@
     <ClCompile Include="Module\Graphics\StaticMesh.cpp" />
     <ClCompile Include="Module\Graphics\UITexture.cpp" />
     <ClCompile Include="Module\Graphics\ViewportFrameBuffer.cpp" />
+    <ClCompile Include="Module\Graphics\Vulkan.cpp" />
+    <ClCompile Include="Module\Graphics\VulkanDevices.cpp" />
+    <ClCompile Include="Module\Graphics\VulkanEnvironment.cpp" />
+    <ClCompile Include="Module\Graphics\VulkanRenderPipeline.cpp" />
     <ClCompile Include="Module\Input\AssignSanitizer.cpp" />
     <ClCompile Include="Module\Input\Input.cpp" />
     <ClCompile Include="Module\Input\InputAssignement.cpp" />
@@ -235,7 +239,10 @@
     <ClInclude Include="Module\Graphics\StaticMesh.h" />
     <ClInclude Include="Module\Graphics\UITexture.h" />
     <ClInclude Include="Module\Graphics\ViewportFrameBuffer.h" />
-    <ClInclude Include="Module\Graphics\VulkanErrors.h" />
+    <ClInclude Include="Module\Graphics\Vulkan.h" />
+    <ClInclude Include="Module\Graphics\VulkanDevices.h" />
+    <ClInclude Include="Module\Graphics\VulkanEnvironment.h" />
+    <ClInclude Include="Module\Graphics\VulkanRenderPipeline.h" />
     <ClInclude Include="Module\Input\AssignSanitizer.h" />
     <ClInclude Include="Module\Input\Input.h" />
     <ClInclude Include="Module\Input\InputAssignement.h" />
