--- a/RealmsVK/RealmsVK.vcxproj.filters
+++ b/RealmsVK/RealmsVK.vcxproj.filters
@@ -149,6 +149,16 @@
     <ClCompile Include="Module\Graphics\IRenderPipeline.cpp">
       <Filter>Module\Graphics\Fondamentals</Filter>
     </ClCompile>
+    <ClCompile Include="Module\Graphics\VulkanEnvironment.cpp">
+      <Filter>Module\Graphics\Fondamentals</Filter>
+    </ClCompile>
+    <ClCompile Include="Module\Graphics\Vulkan.cpp" />
+    <ClCompile Include="Module\Graphics\VulkanDevices.cpp">
+      <Filter>Module\Graphics\Fondamentals</Filter>
+    </ClCompile>
+    <ClCompile Include="Module\Graphics\VulkanRenderPipeline.cpp">
+      <Filter>Module\Graphics\Fondamentals</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Base">
@@ -220,11 +230,11 @@
     <Filter Include="Application">
       <UniqueIdentifier>{3328fe7d-d00d-4949-af49-571e51eaa55d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Module\Graphics\Fondamentals">
-      <UniqueIdentifier>{85cdc5b4-fdc2-4859-a903-be875fb9407a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Utility\MultiThreading">
       <UniqueIdentifier>{64358737-1545-4f5e-943d-1686ad86932e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Module\Graphics\Fondamentals">
+      <UniqueIdentifier>{85cdc5b4-fdc2-4859-a903-be875fb9407a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -350,9 +360,6 @@
     <ClInclude Include="Module\Graphics\StaticMesh.h">
       <Filter>Module\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="Module\Graphics\VulkanErrors.h">
-      <Filter>Module\Graphics</Filter>
-    </ClInclude>
     <ClInclude Include="Module\Graphics\GameShaderProgram.h">
       <Filter>Module\Graphics\Game</Filter>
     </ClInclude>
@@ -435,6 +442,18 @@
       <Filter>Module\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="Module\Graphics\IRenderPipeline.h">
+      <Filter>Module\Graphics\Fondamentals</Filter>
+    </ClInclude>
+    <ClInclude Include="Module\Graphics\Vulkan.h">
+      <Filter>Module\Graphics\Fondamentals</Filter>
+    </ClInclude>
+    <ClInclude Include="Module\Graphics\VulkanEnvironment.h">
+      <Filter>Module\Graphics\Fondamentals</Filter>
+    </ClInclude>
+    <ClInclude Include="Module\Graphics\VulkanDevices.h">
+      <Filter>Module\Graphics\Fondamentals</Filter>
+    </ClInclude>
+    <ClInclude Include="Module\Graphics\VulkanRenderPipeline.h">
       <Filter>Module\Graphics\Fondamentals</Filter>
     </ClInclude>
   </ItemGroup>
