--- a/RealmsVK/RealmsVK.vcxproj.filters
+++ b/RealmsVK/RealmsVK.vcxproj.filters
@@ -159,6 +159,7 @@
     <ClCompile Include="Module\Graphics\VulkanRenderPipeline.cpp">
       <Filter>Module\Graphics\Fondamentals</Filter>
     </ClCompile>
+    <ClCompile Include="VulkanSwapChain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Base">
@@ -456,6 +457,7 @@
     <ClInclude Include="Module\Graphics\VulkanRenderPipeline.h">
       <Filter>Module\Graphics\Fondamentals</Filter>
     </ClInclude>
+    <ClInclude Include="Module\Graphics\VulkanSwapChain.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Base\Allocators\Allocator.inl">
