--- a/RealmsVK/RealmsVK.vcxproj
+++ b/RealmsVK/RealmsVK.vcxproj
@@ -80,7 +80,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>..\Extern\glfw\lib\lib;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\ExtLibs\libs-msvc\libs-x64;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -130,7 +130,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\Extern\glfw\lib\lib;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\ExtLibs\libs-msvc\libs-x64;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -169,9 +169,10 @@
     <ClCompile Include="Module\Graphics\UITexture.cpp" />
     <ClCompile Include="Module\Graphics\ViewportFrameBuffer.cpp" />
     <ClCompile Include="Module\Graphics\Vulkan.cpp" />
-    <ClCompile Include="Module\Graphics\VulkanDevices.cpp" />
+    <ClCompile Include="Module\Graphics\VulkanDevice.cpp" />
     <ClCompile Include="Module\Graphics\VulkanEnvironment.cpp" />
     <ClCompile Include="Module\Graphics\VulkanRenderPipeline.cpp" />
+    <ClCompile Include="Module\Graphics\VulkanSwapChain.cpp" />
     <ClCompile Include="Module\Input\AssignSanitizer.cpp" />
     <ClCompile Include="Module\Input\Input.cpp" />
     <ClCompile Include="Module\Input\InputAssignement.cpp" />
@@ -189,7 +190,6 @@
     <ClCompile Include="Utility\FileIO\VoxFileParser.cpp" />
     <ClCompile Include="Utility\ModManagement\IModContainer.cpp" />
     <ClCompile Include="Utility\ModManagement\ModLoader.cpp" />
-    <ClCompile Include="VulkanSwapChain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base\Allocators\Allocator.h" />
@@ -241,7 +241,7 @@
     <ClInclude Include="Module\Graphics\UITexture.h" />
     <ClInclude Include="Module\Graphics\ViewportFrameBuffer.h" />
     <ClInclude Include="Module\Graphics\Vulkan.h" />
-    <ClInclude Include="Module\Graphics\VulkanDevices.h" />
+    <ClInclude Include="Module\Graphics\VulkanDevice.h" />
     <ClInclude Include="Module\Graphics\VulkanEnvironment.h" />
     <ClInclude Include="Module\Graphics\VulkanRenderPipeline.h" />
     <ClInclude Include="Module\Graphics\VulkanSwapChain.h" />
