--- a/RealmsVK/RealmsVK.vcxproj
+++ b/RealmsVK/RealmsVK.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -23,6 +23,7 @@
     <ProjectGuid>{6435AF1B-97EF-4F22-9B0A-BA3A9DDC840A}</ProjectGuid>
     <RootNamespace>RealmsVK</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Realms</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -81,7 +82,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>..\ExtLibs\libs-msvc\libs-x64;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -95,7 +96,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>..\Extern\glfw-3.3.bin.WIN64\lib-vc2019;C:\VulkanSDK\1.1.126.0\Lib32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -113,7 +114,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\Extern\glfw-3.3.bin.WIN64\lib-vc2019;C:\VulkanSDK\1.1.126.0\Lib32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -131,12 +132,13 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\ExtLibs\libs-msvc\libs-x64;C:\VulkanSDK\1.2.131.2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;vulkan-1.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Base\Allocators\Allocator.cpp" />
     <ClCompile Include="Base\Allocators\FreeListAllocator.cpp" />
+    <ClCompile Include="Base\Allocators\InvalidMemory.cpp" />
     <ClCompile Include="Base\Allocators\LinearAllocator.cpp" />
     <ClCompile Include="Base\Allocators\PoolAllocator.cpp" />
     <ClCompile Include="Base\Allocators\ProxyAllocator.cpp" />
@@ -147,9 +149,12 @@
     <ClCompile Include="Base\Logging\Logger.cpp" />
     <ClCompile Include="Base\Logging\LoggerHandler.cpp" />
     <ClCompile Include="Base\Logging\LogTime.cpp" />
-    <ClCompile Include="Base\Math\Vec2.cpp" />
     <ClCompile Include="Base\Math\VoxelMath.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Module\ECS\ComponentManager.cpp" />
+    <ClCompile Include="Module\ECS\Entity.cpp" />
+    <ClCompile Include="Module\ECS\EntityManager.cpp" />
+    <ClCompile Include="Module\ECS\GameCore.cpp" />
     <ClCompile Include="Module\Graphics\AspectRatio.cpp" />
     <ClCompile Include="Module\Graphics\Camera.cpp" />
     <ClCompile Include="Module\Graphics\GameRenderer.cpp" />
@@ -169,6 +174,7 @@
     <ClCompile Include="Module\Graphics\UITexture.cpp" />
     <ClCompile Include="Module\Graphics\ViewportFrameBuffer.cpp" />
     <ClCompile Include="Module\Graphics\Vulkan.cpp" />
+    <ClCompile Include="Module\Graphics\VulkanBackend.cpp" />
     <ClCompile Include="Module\Graphics\VulkanDevice.cpp" />
     <ClCompile Include="Module\Graphics\VulkanEnvironment.cpp" />
     <ClCompile Include="Module\Graphics\VulkanRenderPipeline.cpp" />
@@ -194,6 +200,7 @@
   <ItemGroup>
     <ClInclude Include="Base\Allocators\Allocator.h" />
     <ClInclude Include="Base\Allocators\FreeListAllocator.h" />
+    <ClInclude Include="Base\Allocators\InvalidMemory.h" />
     <ClInclude Include="Base\Allocators\LinearAllocator.h" />
     <ClInclude Include="Base\Allocators\PoolAllocator.h" />
     <ClInclude Include="Base\Allocators\ProxyAllocator.h" />
@@ -210,10 +217,16 @@
     <ClInclude Include="Base\Math\Vec2.h" />
     <ClInclude Include="Base\Math\Vec3.h" />
     <ClInclude Include="Base\Math\VoxelMath.h" />
-    <ClInclude Include="Base\RlmsException.h" />
+    <ClInclude Include="Base\Exception.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="CoreTypes.h" />
     <ClInclude Include="Initializer.h" />
+    <ClInclude Include="Module\ECS\ComponentManager.h" />
+    <ClInclude Include="Module\ECS\Entity.h" />
+    <ClInclude Include="Module\ECS\EntityManager.h" />
+    <ClInclude Include="Module\ECS\GameCore.h" />
+    <ClInclude Include="Module\ECS\IComponent.h" />
+    <ClInclude Include="Module\ECS\TransformComponent.h" />
     <ClInclude Include="Module\Graphics\AspectRatio.h" />
     <ClInclude Include="Module\Graphics\Camera.h" />
     <ClInclude Include="Module\Graphics\GameRenderer.h" />
@@ -241,6 +254,7 @@
     <ClInclude Include="Module\Graphics\UITexture.h" />
     <ClInclude Include="Module\Graphics\ViewportFrameBuffer.h" />
     <ClInclude Include="Module\Graphics\Vulkan.h" />
+    <ClInclude Include="Module\Graphics\VulkanBackend.h" />
     <ClInclude Include="Module\Graphics\VulkanDevice.h" />
     <ClInclude Include="Module\Graphics\VulkanEnvironment.h" />
     <ClInclude Include="Module\Graphics\VulkanRenderPipeline.h" />
@@ -276,6 +290,8 @@
     <None Include="Base\Math\Rect.inl" />
     <None Include="Base\Math\Vec.inl" />
     <None Include="Base\Math\Vec3.inl" />
+    <None Include="Module\ECS\ComponentManager.inl" />
+    <None Include="Module\ECS\Entity.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
